--- a/test.in
+++ b/test.in
@@ -6,11 +6,11 @@
 #SBATCH -N 1
 #SBATCH -t 00:03:00
 #SBATCH --cpu-freq=1400000
-#SBATCH -J benchmark-@BENCHMARK@
-#SBATCH -o benchmark-@BENCHMARK@.o%j
-#SBATCH -e benchmark-@BENCHMARK@.e%j
+#SBATCH -J test-@TESTTYPE@
+#SBATCH -o test-@TESTTYPE@.o%j
+#SBATCH -e test-@TESTTYPE@.e%j
 
 export MKL_NUM_THREADS=1
 export KMP_AFFINITY=compact
 export KMP_HW_SUBSET=1C,1T
-srun -N 1 -n 1 ./benchmark-@BENCHMARK@
+srun -N 1 -n 1 ./test-@TESTTYPE@
