--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ endif ()
 
 # Common library target for benchmarking.
 add_library(benchmark OBJECT benchmark.cpp)
-target_compile_definitions(benchmark PRIVATE MAX_SPEED=${MAX_SPEED} $<$<BOOL:${ALL_SIZES}>:ALL_SIZES>)
+target_compile_definitions(benchmark PRIVATE MAX_SPEED=${MAX_SPEED})
 target_compile_features(benchmark PRIVATE cxx_std_11)
 
 # Benchmark executable
@@ -28,7 +28,7 @@ foreach (BENCHMARK IN ITEMS blocked blas)
     add_executable(benchmark-${BENCHMARK} dgemm-${BENCHMARK}.c)
     target_link_libraries(benchmark-${BENCHMARK} PRIVATE benchmark ${BLAS_LIBRARIES})
     target_compile_features(benchmark-${BENCHMARK} PRIVATE c_std_11 c_restrict)
-    target_compile_options(benchmark-${BENCHMARK} PRIVATE -Wall -pedantic -march=knl)
+    target_compile_options(benchmark-${BENCHMARK} PRIVATE -Wall -pedantic -march=knl -O3)
 
     # Generate job script
     configure_file(benchmark.in job-benchmark-${BENCHMARK})
